<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="618dp"
        android:layout_height="727dp"
        android:scaleType="centerCrop"
        android:translationX="130dp"
        android:translationY="-60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oc1_char1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_menu_title"
            style="@style/title.primary"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="54dp" />

        <Button
            android:id="@+id/bNewGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/title_menu_new_game"
            android:layout_marginTop="10dp"
            style="@style/menu_button.primary"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="73dp" />

        <Button
            android:id="@+id/bLoadGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/title_menu_load_game"
            android:layout_marginTop="10dp"
            style="@style/menu_button.primary"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="155dp" />

        <Button
            android:id="@+id/bSettings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/title_menu_settings"
            android:layout_marginTop="10dp"
            style="@style/menu_button.primary"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="310dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>