<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <ImageButton
        android:id="@+id/btnLeft"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/btn_description"/>

    <!-- Container Cover -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coverContainer"
        android:layout_width="533dp"
        android:layout_height="267dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnLeft"
        app:layout_constraintEnd_toStartOf="@id/btnRight"
        android:layout_marginHorizontal="16dp">

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/operastage"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-43dp" />
        <View
            android:id="@+id/synopsisBackground"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="0dp"
            android:background="#A0000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/storyTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/title_story"
            style="@style/title.story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/storySynopsis"
            android:layout_width="308dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="96dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/sinopsis"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyTitle" />

        <TextView
            android:id="@+id/storyAuthor"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="108dp"
            android:text="@string/story_synopsis"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/storyTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="48dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_detail"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnRight"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/btn_description"/>

    <!-- Bottom Nav Bar -->
    <include
        android:id="@+id/customBottomBar"
        layout="@layout/new_bottom_navbar"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>