<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coverContainer"
        android:layout_width="0dp"
        android:layout_height="267dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/operastage"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />

        <View
            android:id="@+id/synopsisBackground"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#A0000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/storyTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/title_story"
            style="@style/title.story"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/storySynopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="56dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/sinopsis"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyTitle" />

        <TextView
            android:id="@+id/storyAuthor"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/story_synopsis"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/storyTitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="92dp" />

        <LinearLayout
            android:id="@+id/storyButtonsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/storySynopsis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Play"
                android:textSize="12sp"
                android:background="@drawable/rounded_corner_primary"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:textSize="12sp"
                android:background="@drawable/rounded_corner_primary"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Load"
                android:textSize="12sp"
                android:background="@drawable/rounded_corner_primary"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Custom Bottom Bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customBottomBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Left (Back) -->
            <LinearLayout
                android:id="@+id/backLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Back"
                    android:textColor="@color/secondary"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>
            <!-- Right (Settings) -->
            <LinearLayout
                android:id="@+id/settingsLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Settings"
                    android:textColor="@color/secondary"
                    android:layout_marginEnd="4dp"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/settings" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
